--- a/src/styles/utilities/_fonts.scss
+++ b/src/styles/utilities/_fonts.scss
@@ -10,7 +10,7 @@ h1 {
   line-height: 100px;
   letter-spacing: -2.5px;
   
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(175);
     line-height: 175px;
     letter-spacing: -4.38px;
@@ -28,7 +28,7 @@ h2 {
   font-weight: 700;
   letter-spacing: 3px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(18);
     letter-spacing: 3.6px;
   }
@@ -44,7 +44,7 @@ h3 {
   font-weight: 400;
   letter-spacing: 2px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(13);
     letter-spacing: 2.6px;
   }
@@ -59,7 +59,7 @@ h3 {
   @include pixelsToRem(20);
   font-weight: 700;
   
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(40);
   }
   
@@ -73,7 +73,7 @@ h3 {
   font-weight: 400;
   line-height: 22px;
   
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(18);
     line-height: 28px;
   }
@@ -84,7 +84,7 @@ h3 {
   font-weight: 700;
   line-height: 22px;
   
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(18);
     line-height: 28px;
   }
@@ -96,7 +96,7 @@ h3 {
   line-height: 25px;
   letter-spacing: 3px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(18);
     line-height: 28px;
     letter-spacing: 3.6px;
@@ -114,7 +114,7 @@ h3 {
   line-height: 14px;
   letter-spacing: 3.75px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(16);
     line-height: 28px;
     letter-spacing: 5px;
@@ -127,7 +127,7 @@ h3 {
   line-height: 28px;
   transform: translateY(-0.25rem);
   
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (min-height: 600px) {
     @include pixelsToRem(32);
     transform: translateY(-1.35rem);
   }
